--- a/styles.css
+++ b/styles.css
@@ -173,3 +173,114 @@ button{
 #more{
     display: flex;
 }
+
+#burger{
+    display: none;
+    width: 3rem;
+    font-size: 3rem;
+    margin-right: 0.5rem;
+    cursor: pointer;
+}
+
+.menu-hidden{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    
+}
+@media only screen and (max-width: 938px){
+    body{
+        width: 90vw;
+    }
+    #about-me{
+        font-size: 0.8rem;
+        text-align: justify;
+        width: auto;
+        flex-direction: column;
+        
+    }
+    #story{
+        align-items: center;
+        order: 2;
+        width: 100%;
+    }
+    #about-me p{
+        background-color: aliceblue;
+        width: 90%;
+        opacity: 1;
+        
+        
+    }
+
+    #contact{
+        height: fit-content;
+        width: 100%;
+        
+        
+    }
+    #perfil{
+        height:10rem;
+        width: 10rem;
+        margin: auto;
+        background-size: cover;
+    }
+    #info{
+        font-size: 0.8rem;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin: 1rem 0;
+        
+    }
+    #info h3{
+        display: none;
+    }
+
+    
+    .contact-media{
+        width: 2rem;
+    }
+
+    .lang-icons{
+        width: 3rem;
+        
+        margin-right: 0.8rem;
+    }
+    #skills{
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    #skills h2{
+        width: 100%;
+        text-align: center;
+        text-shadow: 0.1rem 0.1rem 1px yellow;
+    }
+
+}
+
+@media only screen and (max-width:575px){
+    
+    nav ul{
+        display: none;
+       
+    }
+
+    nav{
+        width: 100%;
+        align-items: center;
+    }
+    #burger{
+        display: flex;
+    }
+    header{
+        flex-direction: column;
+        
+    }
+    header h1{
+        order: 2;
+        text-align: center;
+        width: 100%;
+    }
+    
+}
