--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans:wght@300;400&display=swap');
-/*font-family: 'Amatic SC', cursive;
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300&display=swap');
+/*
+font-family: 'Amatic SC', cursive;
 font-family: 'Open Sans', sans-serif;
+font-family: 'Titillium Web', sans-serif;
+
 */
 
 body {
     width: 900px;
     margin: auto;
-    font-family: 'Open Sans', sans-serif;
-    
+    font-family: 'Titillium Web', sans-serif;
     
 }
 
@@ -17,8 +20,10 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-
+    /*align-items: center;*/
+    height: 10.5rem;
+    align-items: flex-start;
+    
 }
 
 header h1 {
@@ -26,52 +31,130 @@ header h1 {
     width: 40%;
     font-size: 2.5rem;
     opacity: 0.8;
-
-}
+    height: max-content;;
+}   
 
 nav {
     display: flex;
     justify-content: flex-end;
     width: 60%;
+    height: 150px;
+    
 }
 
-nav ul {
+
+#main-nav {
     display: flex;
     justify-content: space-between;
     width: 60%;
-    padding: 0;
+    height: fit-content;
     list-style: none;
     font-weight: 900;
     cursor: pointer;
     opacity: 0.9;
-}
-a{
-    text-decoration: none;
+    background-color:black;
+    padding: 0 0.5rem;
+    color:#00aef0;
+    
 
 }
-a:link{
-    color: black;
+
+#main-nav li a:hover{
+    color:#00aef0;
+}
+
+.sub-nav{
+    display: none;
+    position: absolute;
+    float: left;
+    padding: 0.1rem 0;
+    color: whitesmoke;
+    background-color: black;
+    
     
 }
-a:visited{
-    color: black;
+
+
+.drop-down:hover > .sub-nav{
+    display: block;
+    list-style: none;
+    
+    
 }
+
+a:link, a:hover, a:visited, a:focus{
+    color: white;
+    text-decoration: none;
+}
+
+
+.sub-nav a:link{
+    color: whitesmoke;
+    
+}
+
+.sub-nav a:visited{
+    color: whitesmoke;
+}
+
+.sub-nav a:hover{
+    color: #00aef0;
+}
+.sub-nav li:hover{
+    
+    color: #00aef0;
+}
+.sub-nav li::after{
+    content: '( )=>';
+    margin-left: 1rem;
+}
+/*
+.sub-nav li:hover{
+    background-color: gray;
+    color: white;
+    font-size: 1.1rem;
+}
+
+*/
+
+/*a:link{
+    color: white;
+    
+}
+
+
 
 a:hover, a:focus{
-    font-size: larger;
-    color: black;
+    /*font-size: larger;
+    font-size: 1.1rem;
+    background-color: gray;
+    color: white;
     
 }
+
+#main-nav a:visited{
+    color: white;
+}
+
+#main-nav a:link{
+    color: black;
+}
+
+#main-nav a:
+*/
+
+
 
 #about-me {
     display: flex;
+    
 }
 
 #about-me p {
     opacity: 0.8;
     width: 70%;
     padding: 0.5rem 0.5rem 0rem 0.5rem;
-
+    
 }
 
 #about-me span {
@@ -170,7 +253,7 @@ figcaption{
 
 figure img{
     transition:width 0.5s linear 0.3ms,
-    transform 0.3s ease-in-out 0.3ms;
+    transform 0.3s ease 0.3ms;
     
 
 }
@@ -196,6 +279,11 @@ figure img:hover{
 .data-project{
     display: none;
     flex-direction: column;
+    
+}
+
+.link{
+display: flex;
 }
 
 button{
@@ -220,10 +308,12 @@ button{
 
 #burger{
     display: none;
-    width: 3rem;
-    font-size: 3rem;
+    width: 2rem;
+    font-size: 2rem;
     margin-right: 0.5rem;
     cursor: pointer;
+    
+    
 }
 
 .menu-hidden{
@@ -312,9 +402,12 @@ button{
     nav{
         width: 100%;
         align-items: center;
+        background: #37383C;
+        color: white;
     }
     #burger{
         display: flex;
+        margin-bottom: 0.5rem;
     }
     header{
         flex-direction: column;
@@ -324,6 +417,9 @@ button{
         order: 2;
         text-align: center;
         width: 100%;
+    }
+    a:visited{
+        color: whitesmoke;
     }
     
 }
