--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400&display=swap');
 /*
 font-family: 'Amatic SC', cursive;
 font-family: 'Open Sans', sans-serif;
 font-family: 'Titillium Web', sans-serif;
-
+font-family: 'Teko', sans-serif;
 */
 
 body {
     width: 900px;
     margin: auto;
     font-family: 'Titillium Web', sans-serif;
-    
+       
 }
 
 
+h1, #tit-skill{
+    font-family: 'Teko', sans-serif;
+    letter-spacing: 1rem;
+    text-transform: uppercase;
+    font-size: 30px;
+    text-decoration: underline;
+    text-underline-offset: 40%;
+    /*text-decoration-line: overline;
+    text-decoration-thickness: 0.05px;
+    text*/
+    text-decoration-color: #00aef0;
+    
+    
+}
 
 
 header {
     display: flex;
+    
     justify-content: space-between;
-    /*align-items: center;*/
-    height: 10.5rem;
-    align-items: flex-start;
+    
     
 }
 
-header h1 {
-    font-weight: bold;
-    width: 40%;
-    font-size: 2.5rem;
+header h3 {
     opacity: 0.8;
-    height: max-content;;
+    color: #00aef0;
+
+    
 }   
 
 nav {
     display: flex;
-    justify-content: flex-end;
-    width: 60%;
-    height: 150px;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    background-color: black;   
     
 }
 
@@ -46,6 +61,8 @@ nav {
 #main-nav {
     display: flex;
     justify-content: space-between;
+    
+    
     width: 60%;
     height: fit-content;
     list-style: none;
@@ -74,6 +91,12 @@ nav {
     
 }
 
+.drop-down{
+    border-right: 3px solid green;
+    padding-right: 1rem;
+    width: 33%;
+    text-align: center;
+}
 
 .drop-down:hover > .sub-nav{
     display: block;
@@ -82,12 +105,15 @@ nav {
     
 }
 
+
 a:link, a:hover, a:visited, a:focus{
     color: white;
     text-decoration: none;
 }
 
-
+span a:link,span a:hover,span a:visited,span a:focus{
+    color:blue;
+}
 .sub-nav a:link{
     color: whitesmoke;
     
@@ -108,46 +134,64 @@ a:link, a:hover, a:visited, a:focus{
     content: '( )=>';
     margin-left: 1rem;
 }
-/*
-.sub-nav li:hover{
-    background-color: gray;
-    color: white;
-    font-size: 1.1rem;
-}
 
-*/
 
-/*a:link{
-    color: white;
+#test-area{
+    width: 800px;
+    height: 800px;
+    border: 1px solid black;
     
 }
-
-
-
-a:hover, a:focus{
-    /*font-size: larger;
-    font-size: 1.1rem;
-    background-color: gray;
+.anime{
     color: white;
+    animation: moveright 3s ease-in-out 2s infinite alternate;
+    font-family: 'Teko', sans-serif;
+    font-size: 30px;
+    letter-spacing: 0.6rem;
+    /*text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color: green;*/
+    text-align: center;
+    border-right: 3px solid green;
+}
+.proj-img{
+    width: 400px;
+    height: 300px;
+}
+@keyframes moveright{
+    from{
+        color: #00aef0;
+    }
+        
+    to{
+        
+        color: whitesmoke;
+    }
+}
+
+#proyectos{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+    margin-top: 3rem;
+}
+.proyecto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: fit-content;
+    margin: auto;
+    
+    
+    
     
 }
-
-#main-nav a:visited{
-    color: white;
-}
-
-#main-nav a:link{
-    color: black;
-}
-
-#main-nav a:
-*/
-
 
 
 #about-me {
     display: flex;
-    
+    margin-top: 5rem;
 }
 
 #about-me p {
@@ -177,22 +221,7 @@ a:hover, a:focus{
     
 }
 
-#perfil{
-    width: 100%;
-    height: 100%;
-    opacity: 0.3;
-    background-image: url(./images/images.jpg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 5px;
-    transition: opacity 2s linear 0.3ms,
-    background-image 2s linear 0.3ms;
-}
-#perfil:hover{
-    opacity: 1;
-    background-image: url(./images/fotoperfil2.jpg);
-    
-}
+
 #info{
     display: flex;
     flex-direction: column;
@@ -205,7 +234,7 @@ a:hover, a:focus{
     margin: 0.5rem 0;
     height: auto;
     justify-content: space-between;
-
+    animation: slideshow 15s infinite alternate;
 }
 
 #projects i{
@@ -232,7 +261,7 @@ a:hover, a:focus{
     /*border: 2px solid black;*/
     border-radius: 0.2rem;
     width: 90%;
-    height: 100%;
+    height: 30%;
     max-width: 750px;
     align-items: center;
     background-color: white;    
