--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,6 @@ nav {
 #main-nav {
     display: flex;
     justify-content: space-between;
-    
-    
     width: 60%;
     height: fit-content;
     list-style: none;
@@ -84,7 +82,7 @@ nav {
     display: none;
     position: absolute;
     float: left;
-    padding: 0.1rem 0;
+    padding: 1.8rem 0;
     color: whitesmoke;
     background-color: black;
     
@@ -101,7 +99,7 @@ nav {
 .drop-down:hover > .sub-nav{
     display: block;
     list-style: none;
-    
+        
     
 }
 
@@ -155,8 +153,8 @@ span a:link,span a:hover,span a:visited,span a:focus{
     border-right: 3px solid green;
 }
 .proj-img{
-    width: 400px;
-    height: 300px;
+    max-width: 19rem;
+    max-height: 18.75rem;
 }
 @keyframes moveright{
     from{
@@ -173,14 +171,14 @@ span a:link,span a:hover,span a:visited,span a:focus{
     display: flex;
     flex-direction: column;
     width: 100%;
-    position: relative;
     margin-top: 3rem;
+    
 }
 .proyecto{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: fit-content;
+    width: 100%;
     margin: auto;
     
     
@@ -192,19 +190,23 @@ span a:link,span a:hover,span a:visited,span a:focus{
 #about-me {
     display: flex;
     margin-top: 5rem;
+    font-family: 'Teko', sans-serif;
+
 }
 
 #about-me p {
     opacity: 0.8;
     width: 70%;
     padding: 0.5rem 0.5rem 0rem 0.5rem;
+    font-size: 1.5rem;
     
 }
 
 #about-me span {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
     opacity: 0.9;
+    letter-spacing: 0.5rem;
 }
 
 #story {
@@ -214,19 +216,16 @@ span a:link,span a:hover,span a:visited,span a:focus{
 }
 
 #contact{
-    width: 30%;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    
-    
-}
-
-
-#info{
-    display: flex;
-    flex-direction: column;
+    justify-content: space-between;    
+    font-family: 'Teko', sans-serif;
+    font-size: 1.5rem;
     align-items: center;
+    letter-spacing: 0.5rem;
 }
+
+
 
 #project-list {
     display: flex;
@@ -350,6 +349,7 @@ button{
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
+   
     
 }
 @media only screen and (max-width: 938px){
@@ -423,9 +423,11 @@ button{
 
 @media only screen and (max-width:575px){
     
-    nav ul{
+    #main-nav{
         display: none;
-       
+        position: relative;
+        background-color: unset;
+        width: 90%;
     }
 
     nav{
@@ -434,18 +436,35 @@ button{
         background: #37383C;
         color: white;
     }
+
+    .sub-nav{
+        display: none;
+        position: absolute;
+        padding: 0;
+        width: 90vw;
+        left: 0;
+        top: 2.5rem;
+        color: whitesmoke;
+        background-color: black;
+        
+        
+    }
+    
+    
     #burger{
         display: flex;
         margin-bottom: 0.5rem;
+        
     }
     header{
         flex-direction: column;
         
     }
-    header h1{
-        order: 2;
+    nav h3{
         text-align: center;
         width: 100%;
+        
+        
     }
     a:visited{
         color: whitesmoke;
